--- a/index.html
+++ b/index.html
@@ -1853,11 +1853,11 @@
 </head>
 
 <body>
-    <!-- Floating Game Button -->
+    <!-- Floating Game Button 
     <div class="game-floating-btn" onclick="openGameModal()">
         <i class="fas fa-gamepad"></i>
         <div class="tooltip">Feeling Bored? Play a Game! 🎮</div>
-    </div>
+    </div> -->
 
     <!-- Game Modal -->
     <div class="game-modal" id="gameModal">
@@ -2197,18 +2197,25 @@
                             </div>
                             <span class="exp-duration">Feb 2024 - Jun 2025</span>
                         </div>
-                        <p>I work on designing, implementing, and managing cloud and network security solutions with a
-                            strong focus on identity, access, and endpoint security. I configure Microsoft Intune for
-                            device management, compliance enforcement, and security baselines, while managing user
-                            access and identities through Azure Entra ID.
-                            <br>
-                            My role includes implementing MFA, SSO, and conditional access policies, monitoring and
-                            responding to security alerts using Microsoft Defender and Microsoft Sentinel, and
-                            automating security operations with Azure Logic Apps. I handle L3 security incidents,
-                            support infrastructure teams, monitor network traffic for threats, and contribute to
-                            improving the overall security posture. I have also led the implementation of UEBA and Data
-                            Loss Prevention systems in compliance with GDPR, ensuring secure and well-maintained cloud
-                            and network environments.
+                        <p> <ul>
+                            <li>Supported network and security operations in a 5-member IT team.</li>
+                            <li>Resolved L3–L2 network and security issues.</li>
+                            <li>Troubleshot IP services, network devices, and firewalls (Fortinet, Cisco ASA, Cisco FTD)
+                                to ensure timely resolution of tickets and SLA compliance.</li>
+                            <li>Configured, monitored, and maintained firewall policies, VPNs, and security rules across
+                                Fortinet, ASA, and FTD devices.</li>
+                            <li>Documented the resolution of all incident tickets.</li>
+                            <li>Managed Azure Entra ID, MFA, SSO, and Conditional Access policies.</li>
+                            <li>Monitored and responded to security alerts via Microsoft Defender and Sentinel.</li>
+                            <li>Configured OSPF, BGP, VLANs, VTP, STP, IEEE 802.1Q, Inter-VLAN Routing, and SAP
+                                services.</li>
+                            <li>Handled escalated L3 security tickets with timely remediation.</li>
+                            <li>Configured FHRP technologies such as VRRP, GLBP, and HSRP.</li>
+                            <li>Supervised security patch management across infrastructure.</li>
+                            <li>Implemented and managed DLP (Teramind) with policy enforcement, monitoring, and GDPR
+                                compliance.</li>
+                            <li>Implemented Authentication, Authorization, and Accounting (AAA).</li>
+                        </ul>
                         </p>
                         <div class="tech-stack">
                             <span class="tech-item">Azure Entra ID</span>
@@ -2243,15 +2250,18 @@
                             </div>
                             <span class="exp-duration">Jan 2022 - Mar 2024</span>
                         </div>
-                        <p>I work as a Network Engineer within a 7-member IT Infrastructure team, reporting directly to
-                            the Network Team Manager. I am responsible for designing, configuring, and troubleshooting
-                            secure and reliable network environments while supporting internal teams and service
-                            providers. <br>
-
-                            My experience includes routing, switching, and network security implementations such as DNS,
-                            IP routing, NAT, ACLs, VPNs, and HTTP services. I design and manage complex switching
-                            environments, deploy multi-vendor network devices, and ensure efficient, secure network
-                            operations through hands-on troubleshooting and documentation.</p>
+                        <p><li>Network Engineer working within a 7-member IT Infrastructure team, reporting directly to
+                                the Network Team Manager.</li>
+                            <li>Responsible for designing, configuring, and troubleshooting secure and reliable network
+                                environments.</li>
+                            <li>Provided network support to internal teams and external service providers.</li>
+                            <li>Hands-on experience with routing, switching, and network security technologies including
+                                DNS, IP routing, NAT, ACLs, VPNs, and HTTP services.</li>
+                            <li>Designed and managed complex switching environments to ensure efficient and secure
+                                network operations.</li>
+                            <li>Deployed and managed multi-vendor network devices.</li>
+                            <li>Ensured network stability and performance through proactive troubleshooting and detailed
+                                documentation.</li></p>
                         <div class="tech-stack">
                             <span class="tech-item">Routing & Switching
                             </span>
@@ -3374,4 +3384,5 @@
 </body>
 
 </html>
+
 
