Update index.html updated skillss

--- a/index.html
+++ b/index.html
@@ -2218,24 +2218,30 @@
                         </ul>
                         </p>
                         <div class="tech-stack">
+                            <span class="tech-item">Network & Security Operations</span>
+                            <span class="tech-item">L2–L3 Incident Resolution</span>
+                            <span class="tech-item">Fortinet Firewalls</span>
+                            <span class="tech-item">Cisco ASA</span>
+                            <span class="tech-item">Cisco FTD</span>
+                            <span class="tech-item">Firewall Policies & Rule Management</span>
+                            <span class="tech-item">VPN Configuration & Troubleshooting</span>
                             <span class="tech-item">Azure Entra ID</span>
                             <span class="tech-item">Multi-Factor Authentication (MFA)</span>
                             <span class="tech-item">Single Sign-On (SSO)</span>
                             <span class="tech-item">Conditional Access</span>
-                            <span class="tech-item">Microsoft Intune</span>
-                            <span class="tech-item">Endpoint & Device Management</span>
-                            <span class="tech-item">Security Baselines</span>
+                            <span class="tech-item">Microsoft Defender</span>
+                            <span class="tech-item">Microsoft Sentinel (SIEM)</span>
+                            <span class="tech-item">OSPF</span>
+                            <span class="tech-item">BGP</span>
+                            <span class="tech-item">VLANs & Inter-VLAN Routing</span>
+                            <span class="tech-item">STP / VTP / IEEE 802.1Q</span>
+                            <span class="tech-item">FHRP (HSRP, VRRP, GLBP)</span>
                             <span class="tech-item">Patch Management</span>
-                            <span class="tech-item">Microsoft Sentinel (SIEM/SOAR)</span>
-                            <span class="tech-item">Network Traffic Monitoring</span>
-                            <span class="tech-item">Incident Detection & Response</span>
-                            <span class="tech-item">L3 Security Incident Handling</span>
-                            <span class="tech-item">Data Loss Prevention (DLP)</span>
-                            <span class="tech-item">Teramind</span>
+                            <span class="tech-item">Security Incident Handling (L3)</span>
+                            <span class="tech-item">Data Loss Prevention (Teramind)</span>
                             <span class="tech-item">GDPR Compliance</span>
-                            <span class="tech-item">Cloud Security Posture Management</span>
-                            <span class="tech-item">Security Reviews</span>
-                            <span class="tech-item">Infrastructure Security Support</span>
+                            <span class="tech-item">AAA (Authentication, Authorization, Accounting)</span>
+                            <span class="tech-item">Incident Documentation & SLA Compliance</span>
                         </div>
                     </div>
                 </div>
@@ -3384,5 +3390,6 @@
 </body>
 
 </html>
+
 
 
